Replace deprecated node-uuid module with uuid
Signed-off-by: Sonmez Kartal <sonmez@koding.com>

--- a/package.json
+++ b/package.json
@@ -81,7 +81,6 @@
     "node-dogstatsd": "0.0.6",
     "node-sockjs-client": "1.0.7",
     "node-syntaxhighlighter": "0.8.1",
-    "node-uuid": "1.4.7",
     "nodemailer": "2.7.0",
     "oauth": "0.9.15",
     "on-finished": "2.3.0",
@@ -109,6 +108,7 @@
     "url": "0.11.0",
     "url-join": "1.1.0",
     "url-parse": "1.1.7",
+    "uuid": "3.0.1",
     "validator": "6.2.1",
     "winston": "2.3.0",
     "winston-papertrail": "1.0.4",
