--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "url-join": "1.1.0",
     "url-parse": "1.1.7",
     "uuid": "3.0.1",
+    "uuid-validate": "0.0.2",
     "validator": "6.2.1",
     "winston": "2.3.0",
     "winston-papertrail": "1.0.4",
