landing: jekyll: alan added to team

--- a/docs/_data/members.yml
+++ b/docs/_data/members.yml
@@ -20,9 +20,9 @@
     link: https://jobs.lever.co/koding/4ee5df76-953e-4922-b8fb-dfb82d2fe5a9
   members:
 
-    - name: Gabriel Padva
+    - name: Alan McMillan
       title: BD & Partnerships
-      linkedin: gabrielpadva
+      linkedin: alanmcmillan
 
     - name: Merrill Freund
       title: Public Relations
