Introduce /etc/cron.d/koding
Signed-off-by: Sonmez Kartal <sonmez@koding.com>

--- a/.ebextensions/007_crontab.config
+++ b/.ebextensions/007_crontab.config
@@ -1,21 +1,9 @@
 files:
-  "/opt/elasticbeanstalk/hooks/appdeploy/enact/007_01_add_cron_jobs.sh" :
-    mode: "000777"
+  "/etc/cron.d/koding":
+    mode: "000644"
     owner: root
     group: root
     content: |
-        #!/bin/bash
-        # this bash script adds this cronjob only once
-
-        # set sh
-        conf="SHELL=/bin/sh"
-        cat <(fgrep -i -v "$conf" <(crontab -l)) <(echo "$conf") | crontab -
-
-        # set paths
-        conf="PATH=/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin:/opt/aws/bin:/usr/local/go/bin:/usr/local/go/bin:/root/bin"
-        cat <(fgrep -i -v "$conf" <(crontab -l)) <(echo "$conf") | crontab -
-
-        # set cron
-        command="/var/app/current/scripts/kill-cpu-exhauster.sh"
-        job="*/5 * * * * $command"
-        cat <(fgrep -i -v "$command" <(crontab -l)) <(echo "$job") | crontab -
+      SHELL=/bin/sh
+      PATH=/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin:/opt/aws/bin:/usr/local/go/bin:/usr/local/go/bin:/root/bin
+      */5 * * * * root /var/app/current/scripts/kill-cpu-exhauster.sh
