Set /bin/bash as SHELL
Signed-off-by: Sonmez Kartal <sonmez@koding.com>

--- a/.ebextensions/007_crontab.config
+++ b/.ebextensions/007_crontab.config
@@ -4,6 +4,6 @@ files:
     owner: root
     group: root
     content: |
-      SHELL=/bin/sh
+      SHELL=/bin/bash
       PATH=/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin:/opt/aws/bin:/usr/local/go/bin:/usr/local/go/bin:/root/bin
       */5 * * * * root /var/app/current/scripts/kill-cpu-exhauster.sh
