Fix PATH for cron jobs
Signed-off-by: Sonmez Kartal <sonmez@koding.com>

--- a/.ebextensions/007_crontab.config
+++ b/.ebextensions/007_crontab.config
@@ -5,5 +5,5 @@ files:
     group: root
     content: |
       SHELL=/bin/bash
-      PATH=/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin:/opt/aws/bin:/usr/local/go/bin:/usr/local/go/bin:/root/bin
+      PATH=/usr/local/sbin:/usr/local/bin:/usr/local/go/bin:/opt/aws/bin:/usr/sbin:/usr/bin:/sbin:/bin
       */5 * * * * root /var/app/current/scripts/kill-cpu-exhauster.sh
