Initial ignored module list
Signed-off-by: Sonmez Kartal <sonmez@koding.com>

--- a/package.json
+++ b/package.json
@@ -126,5 +126,11 @@
     "sync-request": "4.0.1",
     "which": "1.2.12"
   },
-  "optionalDependencies": {}
+  "optionalDependencies": {},
+  "greenkeeper": {
+    "ignore": [
+        "mongodb",
+        "mocha"
+    ]
+  }
 }
