--- a/client/package.json
+++ b/client/package.json
@@ -94,6 +94,7 @@
     "build:dev": "NODE_ENV=development webpack --config webpack.config.coffee",
     "build:prod": "NODE_ENV=production webpack --config webpack.config.coffee --bail",
     "watch:dev": "NODE_ENV=development webpack --config webpack.config.coffee --colors --debug --watch",
+    "watch:prod": "NODE_ENV=production webpack --config webpack.config.coffee --colors --debug --watch",
     "test:redux": "mocha-webpack --webpack-config webpack.config.test.js 'app/lib/redux/**/*.test.coffee'"
   },
   "browser": {
