package: update terraform-yml version

--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "speakeasy": "1.0.3",
     "stripcolorcodes": "0.1.0",
     "stylus": "0.54.5",
-    "terraform-yml": "1.0.10",
+    "terraform-yml": "hakankaradis/stack-docs-search",
     "toml-js": "0.0.8",
     "tough-cookie": "2.3.2",
     "traverse": "0.6.6",
