--- a/client/package.json
+++ b/client/package.json
@@ -123,6 +123,7 @@
     "css-loader": "0.26.1",
     "expect": "1.20.2",
     "express": "4.14.0",
+    "extract-text-webpack-plugin": "2.0.0-rc.0",
     "file-loader": "0.9.0",
     "glob": "7.1.1",
     "happypack": "3.0.2",
