Execute script as postgres user
Signed-off-by: Sonmez Kartal <sonmez@koding.com>

--- a/go/src/socialapi/db/sql/Dockerfile
+++ b/go/src/socialapi/db/sql/Dockerfile
@@ -27,7 +27,7 @@ USER root
 
 RUN service postgresql start && \
     /definition/init.sh && \
-    /definition/create.sh
+    su postgres -c /definition/create.sh
 
 EXPOSE 5432
 
