client: replace shortcuts pkg with @koding/shortcuts
Signed-off-by: Umut Sirin <umutsirin1@gmail.com>

--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@koding/bongo-client": "koding/bongo-client#v0.4",
     "@koding/getscript": "0.1.0",
     "@koding/inherits-underscore": "0.2.0",
+    "@koding/shortcuts": "0.6.0",
     "accounting": "0.4.1",
     "algoliasearch": "3.20.3",
     "async": "2.1.4",
@@ -78,7 +79,6 @@
     "redux-thunk": "2.1.0",
     "reselect": "2.5.4",
     "seamless-immutable": "7.0.1",
-    "shortcuts": "0.5.7",
     "timeago": "0.2.0",
     "twitter-text": "1.14.3",
     "validator": "6.2.1"
