Add kite related test steps to Circle CI build stage
Signed-off-by: Sonmez Kartal <sonmez@koding.com>

--- a/circle.yml
+++ b/circle.yml
@@ -93,3 +93,33 @@ stages:
         paths:
           - go/bin
           - go/pkg
+
+      - type: shell
+        name: check kite configuration
+        command: ./run exec scripts/gotests.sh kites koding/kites/config
+
+      - type: shell
+        name: check generated JSON files
+        command: ./run exec scripts/check-generated-files.sh
+
+      - type: shell
+        name: test kites
+        command: ./run exec go/src/koding/kites/e2etest/e2etest.sh
+
+      - type: shell
+        name: test klient
+        command: ./run exec scripts/test-klient.sh
+
+      - type: shell
+        name: test kd
+        command: ./run exec scripts/test-kd.sh
+
+      - type: shell
+        name: test kontrol
+        command: ./run exec scripts/gotests.sh koding/kites/kontrol/kontrol
+
+      - type: shell
+        name: test kloud
+        command: ./run exec scripts/gotests.sh kites \
+          koding/kites/kloud/provider/... koding/kites/kloud/credential/... \
+          koding/kites/kloud/stack/... koding/kites/kloud/kloud/...
