--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - postgres
       - rabbitmq
       - redis
+      - countly
 
   client:
     image: koding/base
@@ -42,6 +43,9 @@ services:
 
   postgres:
     image: koding/postgres
+
+  countly:
+    image: countly/countly-server:16.06
 
   rabbitmq:
     image: rabbitmq:3-management
