client/package.json: add particles.js

--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     "normalizr": "3.0.2",
     "nuclear-js": "1.4.0",
     "nuclear-module": "0.5.1",
+    "particles.js": "2.0.0",
     "perfect-scrollbar": "0.6.15",
     "pluralize": "3.1.0",
     "raf": "3.3.0",
