package.json: add backoff package

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "appmetrics": "1.2.0",
     "async": "1.5.0",
     "aws-sdk": "2.7.21",
+    "backoff": "2.5.0",
     "bluebird": "3.4.7",
     "body-parser": "1.15.2",
     "busboy": "0.2.13",
