Check remote API consistency in Circle CI build stage
Signed-off-by: Sonmez Kartal <sonmez@koding.com>

--- a/circle.yml
+++ b/circle.yml
@@ -60,6 +60,10 @@ stages:
         command: ./configure
 
       - type: shell
+        name: check remote API consistency
+        command: ./run exec scripts/api-generator.coffee --check
+
+      - type: shell
         name: check client code quality
         command: scripts/check_client_code_quality.sh
 
