--- a/circle.yml
+++ b/circle.yml
@@ -163,3 +163,7 @@ stages:
         environment:
           EXTRAS: -convey-story=true
         command: ./run exec make -C go/src/socialapi testapi
+
+      - type: shell
+        name: test social worker
+        command: ./run exec scripts/node-testing/mocha-runner workers/social/lib/social
