--- a/wercker.yml
+++ b/wercker.yml
@@ -278,7 +278,7 @@ deploy:
         bucket-url: s3://koding-assets/a/p/p/
         key-id: $S3_KEY_ID
         key-secret: $S3_KEY_SECRET
-        opts: "--no-mime-magic --guess-mime-type"
+        opts: "--no-mime-magic --guess-mime-type --acl-public"
 
   s3-klient-production:
     - script:
