Sync only versioned assets
Signed-off-by: Sonmez Kartal <sonmez@koding.com>

--- a/wercker.yml
+++ b/wercker.yml
@@ -85,8 +85,8 @@ build:
           make -C client dist
           scripts/notify-cebeci.sh "build" "<$WERCKER_BUILD_URL|build> of $WERCKER_GIT_BRANCH - build client finished" "building" 35
     - wercker/s3sync@2.0.3:
-        source-dir: website/a/p/p
-        bucket-url: s3://koding-assets/a/p/p/
+        source-dir: website/a/p/p/$(cat VERSION)/
+        bucket-url: s3://koding-assets/a/p/p/$(cat VERSION)/
         key-id: $S3_KEY_ID
         key-secret: $S3_KEY_SECRET
         opts: "--no-mime-magic --guess-mime-type --acl-public"
