Run migrations in Circle CI build stage
Signed-off-by: Sonmez Kartal <sonmez@koding.com>

--- a/circle.yml
+++ b/circle.yml
@@ -140,3 +140,7 @@ stages:
       - type: shell
         name: test mongo models
         command: ./run exec go test koding/db/mongodb/modelhelper
+
+      - type: shell
+        name: run database migration
+        command: ./run migrations up
