--- a/circle.yml
+++ b/circle.yml
@@ -144,3 +144,9 @@ stages:
       - type: shell
         name: run database migration
         command: ./run migrations up
+
+      - type: shell
+        name: set up dnsmasq
+        command: |
+          service dnsmasq start
+          echo nameserver 127.0.0.1 > /etc/resolv.conf
