--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "express": "4.14.0",
     "faker": "3.1.0",
     "geoip-lite": "1.1.8",
-    "git-rev": "0.2.1",
     "github": "7.3.1",
     "gitlab": "1.7.1",
     "googleapis": "16.0.0",
@@ -121,6 +120,7 @@
     "chai": "3.5.0",
     "coffeelint": "1.16.0",
     "crypto": "0.0.3",
+    "git-rev-sync": "1.8.0",
     "mocha": "2.2.4",
     "mongodb-migrate": "2.0.1",
     "which": "1.2.12"
