--- a/wercker.yml
+++ b/wercker.yml
@@ -158,7 +158,7 @@ build:
     - script:
         name: check connectivity
         code: |
-          scripts/wercker/run-command scripts/wercker/check-connectivity INSTANCE_DATA
+          scripts/wercker/run-command ./run exec scripts/wercker/check-connectivity INSTANCE_DATA
     - script:
         name: test nodejs
         code: scripts/wercker/run-command scripts/node-testing/run-tests INSTANCE_DATA
@@ -188,7 +188,7 @@ build:
         code: ./run exec scripts/wercker/upload-logs INSTANCE_DATA
     - script:
         name: cleanup
-        code: scripts/wercker/cleanup INSTANCE_DATA
+        code: ./run exec scripts/wercker/cleanup INSTANCE_DATA
     - jessefulton/slack-notify:
         subdomain: koding
         token: $SLACK_TOKEN
