Define `node_modules` target
Signed-off-by: Sonmez Kartal <sonmez@koding.com>

--- a/client/landing/Makefile
+++ b/client/landing/Makefile
@@ -1,4 +1,10 @@
-all: build
+DIR=$(shell dirname $(realpath $(lastword $(MAKEFILE_LIST))))
+SCRIPTS=$(DIR)/../../scripts
+
+all: node_modules build
+
+node_modules:
+	$(SCRIPTS)/check-node_modules.sh || npm install
 
 build:
 	@node_modules/.bin/gulp build-all-sites
