Move upload-logs script to scripts/test-instance directory
Signed-off-by: Sonmez Kartal <sonmez@koding.com>

--- a/wercker.yml
+++ b/wercker.yml
@@ -185,7 +185,7 @@ build:
           nvm use 6
     - script:
         name: upload logs
-        code: ./run exec scripts/wercker/upload-logs INSTANCE_DATA
+        code: ./run exec scripts/test-instance/upload-logs INSTANCE_DATA $WERCKER_BUILD_ID
     - script:
         name: cleanup
         code: ./run exec scripts/wercker/cleanup INSTANCE_DATA
