--- a/circle.yml
+++ b/circle.yml
@@ -92,7 +92,7 @@ stages:
       - type: shell
         name: sync website assets
         command: |
-          [ -z "$AWS_ACCESS_KEY" || -z "$AWS_ACCESS_SECRET_KEY" ] && exit 0
+          [[ -z "$AWS_ACCESS_KEY" || -z "$AWS_ACCESS_SECRET_KEY" ]] && exit 0
           s3cmd sync --access_key=$AWS_ACCESS_KEY --secret_key=$AWS_ACCESS_SECRET_KEY \
             --no-mime-magic --guess-mime-type --acl-public \
             website/a/p/p/$(git rev-parse --short HEAD)/ \
@@ -196,4 +196,4 @@ stages:
       - type: shell
         name: codecov
         command: |
-          [ -n "$CODECOV_TOKEN" ] && bash <(curl --silent https://codecov.io/bash) -X gcov -X fix || exit 0
+          [[ -n "$CODECOV_TOKEN" ]] && bash <(curl --silent https://codecov.io/bash) -X gcov -X fix || exit 0
