--- a/circle.yml
+++ b/circle.yml
@@ -192,6 +192,8 @@ stages:
         command: |
           ./run exec scripts/test-instance/check-connectivity INSTANCE_DATA circle-build-$CIRCLE_BUILD_NUM
           ./run exec scripts/ci/run-tests INSTANCE_DATA
+          status=$?
+          [[ $status -eq 0 ]] && ./run exec scripts/test-instance/cleanup INSTANCE_DATA
 
       - type: shell
         name: codecov
