--- a/wercker.yml
+++ b/wercker.yml
@@ -186,7 +186,7 @@ build:
     - script:
         name: upload logs
         code: |
-          [[ "$WERCKER_RESULT" == 'passed' ]] && ./run exec scripts/test-instance/upload-logs INSTANCE_DATA $WERCKER_BUILD_ID
+          [[ "$WERCKER_RESULT" == 'failed' ]] && ./run exec scripts/test-instance/upload-logs INSTANCE_DATA $WERCKER_BUILD_ID || exit 0
     - script:
         name: cleanup
         code: ./run exec scripts/wercker/cleanup INSTANCE_DATA
