client: jekyll: favicon fixes

--- a/docs/assets/favicon/manifest.json
+++ b/docs/assets/favicon/manifest.json
@@ -2,12 +2,12 @@
     "name": "Koding",
     "icons": [
         {
-            "src": "/assets/favicon/android-chrome-192x192.png?v=wAvxkwgmmY",
+            "src": "{{ site.url }}/assets/favicon/android-chrome-192x192.png?v=wAvxkwgmmY",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/assets/favicon/android-chrome-512x512.png?v=wAvxkwgmmY",
+            "src": "{{ site.url }}/assets/favicon/android-chrome-512x512.png?v=wAvxkwgmmY",
             "sizes": "512x512",
             "type": "image/png"
         }
