Rename s3cmd command access key environment variables
Signed-off-by: Sonmez Kartal <sonmez@koding.com>

--- a/circle.yml
+++ b/circle.yml
@@ -92,8 +92,8 @@ stages:
       - type: shell
         name: sync website assets
         command: |
-          [[ -z "$AWS_ACCESS_KEY" || -z "$AWS_ACCESS_SECRET_KEY" ]] && exit 0
-          s3cmd sync --access_key=$AWS_ACCESS_KEY --secret_key=$AWS_ACCESS_SECRET_KEY \
+          [[ -z "S3CMD_ACCESS_KEY" || -z "S3CMD_SECRET_KEY" ]] && exit 0
+          s3cmd sync --access_key=$S3CMD_ACCESS_KEY --secret_key=$S3CMD_SECRET_KEY \
             --no-mime-magic --guess-mime-type --acl-public \
             website/a/p/p/$(git rev-parse --short HEAD)/ \
             s3://koding-assets/a/p/p/$(git rev-parse --short HEAD)/
