Read Papertrail credentials form KONFIG object
Signed-off-by: Sonmez Kartal <sonmez@koding.com>

--- a/.ebextensions/004_files_config_updaters.config
+++ b/.ebextensions/004_files_config_updaters.config
@@ -25,9 +25,11 @@ files:
 
       cd /var/app/current
 
+      source .env.sh
+
       PAPERTRAIL_URL="https://papertrailapp.com/api/v1/systems"
-      PAPERTRAIL_PORT=`cat PAPERTRAIL_PORT`
-      PAPERTRAIL_TOKEN=`cat PAPERTRAIL_TOKEN`
+      PAPERTRAIL_PORT=$(echo $KONFIG_PAPERTRAIL_DESTINATION | awk --field-separator ':' '{print $2}')
+      PAPERTRAIL_TOKEN=$KONFIG_PAPERTRAIL_TOKEN
 
       # AWS stores environment vars added via ui in this file. `EB_ENV_NAME` refers to the current
       # elasticbeanstalk environment name. It's in format of `koding-<name>`, ie `koding-latest`.
