--- a/.ebextensions/099_datadog.config
+++ b/.ebextensions/099_datadog.config
@@ -23,6 +23,8 @@ container_commands:
         command: "cp .ebextensions/datadog/datadog.repo /etc/yum.repos.d/datadog.repo; yum -y makecache; yum -y install datadog-agent; /etc/init.d/datadog-agent stop"
     91setup_datadog:
         command: "cp .ebextensions/datadog/datadog.conf /etc/dd-agent/datadog.conf"
+    91setup_datadog_apikey:
+        command: "bash -c 'source .env.sh && echo api_key: $KONFIG_DATADOG_API_KEY >>/etc/dd-agent/datadog.conf'"
     92setup_datadog_process_monitoring:
         command: "cp .ebextensions/datadog/process.yaml /etc/dd-agent/conf.d/process.yaml"
     92setup_datadog_connection_monitoring:
